@@ -224,6 +224,7 @@ dist_pkgdata_DATA = \
   CMS_2015_I1385107.info \
   CMS_2012_PAS_QCD_11_010.info \
   CMS_QCD_10_024.info \
+  CMS_2015_I1346843.info \
   CMSTOTEM_2014_I1294140.info \
   TOTEM_2014_I1328627.info \
   D0_1996_S3214044.info \
