@@ -1,0 +1,43 @@
+# BEGIN PLOT /CMS_2015_I1346843/d01-.*
+XLabel=$E_T$ [GeV]
+YLabel=$\mathrm{d}\sigma / \mathrm{d}E_T$ [pb/GeV]
+LogX=0
+# END PLOT
+
+# BEGIN PLOT /CMS_2015_I1346843/d01-x01-y01
+Title=CMS, $Z \leftarrow \mu\mu\gamma$, $\sqrt{s}$ = 7 TeV , Photon $E_T$
+# END PLOT
+
+# BEGIN PLOT /CMS_2015_I1346843/d01-x02-y01
+Title=CMS, $Z \leftarrow \mu\mu\gamma$, $\sqrt{s}$ = 7 TeV , Photon $E_T$  ($0.5 < \Delta R < 3.0$)
+# END PLOT
+
+# BEGIN PLOT /CMS_2015_I1346843/d01-x03-y01
+Title=CMS, $Z \leftarrow \mu\mu\gamma$, $\sqrt{s}$ = 7 TeV , Photon $E_T$ ($0.05 < \Delta R < 0.5$)
+# END PLOT
+
+# BEGIN PLOT /CMS_2015_I1346843/d01-x04-y01
+Title=CMS, $Z \leftarrow \mu\mu\gamma$, $\sqrt{s}$ = 7 TeV , Photon $E_T$ ($q_T < 10$ GeV)
+# END PLOT
+
+# BEGIN PLOT /CMS_2015_I1346843/d01-x05-y01
+Title=CMS, $Z \leftarrow \mu\mu\gamma$, $\sqrt{s}$ = 7 TeV , Photon $E_T$ ($q_T > 50$ GeV)
+# END PLOT
+
+# BEGIN PLOT /CMS_2015_I1346843/d02-.*
+XLabel=$\Delta R_{\gamma\mu}$
+YLabel=$\mathrm{d}\sigma / \mathrm{d}\Delta R_{\gamma\mu}$ [pb]
+# END PLOT
+
+# BEGIN PLOT /CMS_2015_I1346843/d02-x01-y01
+Title=CMS, $Z \leftarrow \mu\mu\gamma$, $\sqrt{s}$ = 7 TeV , $\Delta R_{\gamma\mu}$
+# END PLOT
+
+# BEGIN PLOT /CMS_2015_I1346843/d02-x02-y01
+Title=CMS, $Z \leftarrow \mu\mu\gamma$, $\sqrt{s}$ = 7 TeV , $\Delta R_{\gamma\mu}$ ($q_T < 10$ GeV)
+# END PLOT
+
+# BEGIN PLOT /CMS_2015_I1346843/d02-x03-y01
+Title=CMS, $Z \leftarrow \mu\mu\gamma$, $\sqrt{s}$ = 7 TeV , $\Delta R_{\gamma\mu}$ ($q_T > 50$ GeV)
+# END PLOT
+
