@@ -1,0 +1,128 @@
+# BEGIN YODA_SCATTER2D /REF/CMS_2015_I1346843/d01-x01-y01
+Path=/REF/CMS_2015_I1346843/d01-x01-y01
+Type=Scatter2D
+# xval   xerr-   xerr+   yval    yerr-   yerr+
+7.50e+00	2.50e+00	2.50e+00	1.26e+00	7.20e-02	7.20e-02
+1.25e+01	2.50e+00	2.50e+00	6.85e-01	2.92e-02	2.92e-02
+1.75e+01	2.50e+00	2.50e+00	4.11e-01	1.77e-02	1.77e-02
+2.25e+01	2.50e+00	2.50e+00	2.67e-01	1.22e-02	1.22e-02
+2.75e+01	2.50e+00	2.50e+00	1.70e-01	8.77e-03	8.77e-03
+3.50e+01	5.00e+00	5.00e+00	7.26e-02	4.30e-03	4.30e-03
+4.50e+01	5.00e+00	5.00e+00	1.49e-02	1.36e-03	1.36e-03
+6.25e+01	1.25e+01	1.25e+01	2.68e-03	3.57e-04	3.57e-04
+8.75e+01	1.25e+01	1.25e+01	5.81e-04	1.56e-04	1.56e-04
+# END YODA_SCATTER2D
+
+
+# BEGIN YODA_SCATTER2D /REF/CMS_2015_I1346843/d01-x02-y01
+Path=/REF/CMS_2015_I1346843/d01-x02-y01
+Type=Scatter2D
+# xval   xerr-   xerr+   yval    yerr-   yerr+
+7.50e+00	2.50e+00	2.50e+00	5.13e-01	5.01e-02	5.01e-02
+1.25e+01	2.50e+00	2.50e+00	2.68e-01	1.51e-02	1.51e-02
+1.75e+01	2.50e+00	2.50e+00	1.55e-01	8.22e-03	8.22e-03
+2.25e+01	2.50e+00	2.50e+00	9.94e-02	5.61e-03	5.61e-03
+2.75e+01	2.50e+00	2.50e+00	6.52e-02	4.10e-03	4.10e-03
+3.50e+01	5.00e+00	5.00e+00	2.76e-02	2.02e-03	2.02e-03
+4.50e+01	5.00e+00	5.00e+00	6.01e-03	8.71e-04	8.71e-04
+6.25e+01	1.25e+01	1.25e+01	8.75e-04	2.46e-04	2.46e-04
+8.75e+01	1.25e+01	1.25e+01	2.23e-04	1.02e-04	1.02e-04
+# END YODA_SCATTER2D
+
+
+# BEGIN YODA_SCATTER2D /REF/CMS_2015_I1346843/d01-x03-y01
+Path=/REF/CMS_2015_I1346843/d01-x03-y01
+Type=Scatter2D
+# xval   xerr-   xerr+   yval    yerr-   yerr+
+7.50e+00	2.50e+00	2.50e+00	7.49e-01	3.22e-02	3.22e-02
+1.25e+01	2.50e+00	2.50e+00	4.17e-01	1.62e-02	1.62e-02
+1.75e+01	2.50e+00	2.50e+00	2.56e-01	1.09e-02	1.09e-02
+2.25e+01	2.50e+00	2.50e+00	1.68e-01	7.72e-03	7.72e-03
+2.75e+01	2.50e+00	2.50e+00	1.05e-01	5.63e-03	5.63e-03
+3.50e+01	5.00e+00	5.00e+00	4.51e-02	2.74e-03	2.74e-03
+4.50e+01	5.00e+00	5.00e+00	8.93e-03	8.23e-04	8.23e-04
+6.25e+01	1.25e+01	1.25e+01	1.80e-03	2.03e-04	2.03e-04
+8.75e+01	1.25e+01	1.25e+01	3.58e-04	1.04e-04	1.04e-04
+# END YODA_SCATTER2D
+
+
+# BEGIN YODA_SCATTER2D /REF/CMS_2015_I1346843/d01-x04-y01
+Path=/REF/CMS_2015_I1346843/d01-x04-y01
+Type=Scatter2D
+# xval   xerr-   xerr+   yval    yerr-   yerr+
+7.50e+00	2.50e+00	2.50e+00	5.27e-01	2.52e-02	2.52e-02
+1.25e+01	2.50e+00	2.50e+00	2.94e-01	1.17e-02	1.17e-02
+1.75e+01	2.50e+00	2.50e+00	1.84e-01	7.92e-03	7.92e-03
+2.25e+01	2.50e+00	2.50e+00	1.27e-01	6.05e-03	6.05e-03
+2.75e+01	2.50e+00	2.50e+00	8.59e-02	4.88e-03	4.88e-03
+3.50e+01	5.00e+00	5.00e+00	3.22e-02	2.26e-03	2.26e-03
+4.50e+01	5.00e+00	5.00e+00	1.46e-03	3.02e-04	3.02e-04
+6.25e+01	1.25e+01	1.25e+01	1.92e-04	7.79e-05	7.79e-05
+8.75e+01	1.25e+01	1.25e+01	1.67e-05	2.20e-05	2.20e-05
+# END YODA_SCATTER2D
+
+
+# BEGIN YODA_SCATTER2D /REF/CMS_2015_I1346843/d01-x05-y01
+Path=/REF/CMS_2015_I1346843/d01-x05-y01
+Type=Scatter2D
+# xval   xerr-   xerr+   yval    yerr-   yerr+
+7.50e+00	2.50e+00	2.50e+00	1.04e-01	9.66e-03	9.66e-03
+1.25e+01	2.50e+00	2.50e+00	6.26e-02	4.37e-03	4.37e-03
+1.75e+01	2.50e+00	2.50e+00	3.67e-02	2.71e-03	2.71e-03
+2.25e+01	2.50e+00	2.50e+00	2.19e-02	1.79e-03	1.79e-03
+2.75e+01	2.50e+00	2.50e+00	1.94e-02	1.61e-03	1.61e-03
+3.50e+01	5.00e+00	5.00e+00	9.98e-03	8.69e-04	8.69e-04
+4.50e+01	5.00e+00	5.00e+00	6.21e-03	6.34e-04	6.34e-04
+6.25e+01	1.25e+01	1.25e+01	1.90e-03	2.34e-04	2.34e-04
+8.75e+01	1.25e+01	1.25e+01	4.56e-04	1.10e-04	1.10e-04
+# END YODA_SCATTER2D
+
+
+# BEGIN YODA_SCATTER2D /REF/CMS_2015_I1346843/d02-x01-y01
+Path=/REF/CMS_2015_I1346843/d02-x01-y01
+Type=Scatter2D
+# xval   xerr-   xerr+   yval    yerr-   yerr+
+7.50e-02	2.50e-02	2.50e-02	5.39e+01	2.16e+00	2.16e+00
+1.25e-01	2.50e-02	2.50e-02	3.19e+01	1.31e+00	1.31e+00
+2.25e-01	7.50e-02	7.50e-02	1.84e+01	7.17e-01	7.17e-01
+4.00e-01	1.00e-01	1.00e-01	1.01e+01	4.05e-01	4.05e-01
+6.50e-01	1.50e-01	1.50e-01	6.14e+00	2.72e-01	2.72e-01
+1.00e+00	2.00e-01	2.00e-01	4.22e+00	2.24e-01	2.24e-01
+1.40e+00	2.00e-01	2.00e-01	2.94e+00	2.08e-01	2.08e-01
+1.80e+00	2.00e-01	2.00e-01	1.76e+00	1.76e-01	1.76e-01
+2.50e+00	5.00e-01	5.00e-01	4.57e-01	1.08e-01	1.08e-01
+# END YODA_SCATTER2D
+
+
+# BEGIN YODA_SCATTER2D /REF/CMS_2015_I1346843/d02-x02-y01
+Path=/REF/CMS_2015_I1346843/d02-x02-y01
+Type=Scatter2D
+# xval   xerr-   xerr+   yval    yerr-   yerr+
+7.50e-02	2.50e-02	2.50e-02	2.30e+01	9.60e-01	9.60e-01
+1.25e-01	2.50e-02	2.50e-02	1.37e+01	6.25e-01	6.25e-01
+2.25e-01	7.50e-02	7.50e-02	7.88e+00	3.21e-01	3.21e-01
+4.00e-01	1.00e-01	1.00e-01	4.38e+00	1.88e-01	1.88e-01
+6.50e-01	1.50e-01	1.50e-01	2.65e+00	1.20e-01	1.20e-01
+1.00e+00	2.00e-01	2.00e-01	1.75e+00	8.70e-02	8.70e-02
+1.40e+00	2.00e-01	2.00e-01	1.29e+00	7.69e-02	7.69e-02
+1.80e+00	2.00e-01	2.00e-01	7.22e-01	5.87e-02	5.87e-02
+2.50e+00	5.00e-01	5.00e-01	1.02e-01	2.48e-02	2.48e-02
+# END YODA_SCATTER2D
+
+
+# BEGIN YODA_SCATTER2D /REF/CMS_2015_I1346843/d02-x03-y01
+Path=/REF/CMS_2015_I1346843/d02-x03-y01
+Type=Scatter2D
+# xval   xerr-   xerr+   yval    yerr-   yerr+
+7.50e-02	2.50e-02	2.50e-02	4.94e+00	3.11e-01	3.11e-01
+1.25e-01	2.50e-02	2.50e-02	2.97e+00	2.12e-01	2.12e-01
+2.25e-01	7.50e-02	7.50e-02	1.71e+00	1.05e-01	1.05e-01
+4.00e-01	1.00e-01	1.00e-01	9.49e-01	6.27e-02	6.27e-02
+6.50e-01	1.50e-01	1.50e-01	6.25e-01	4.65e-02	4.65e-02
+1.00e+00	2.00e-01	2.00e-01	4.41e-01	4.03e-02	4.03e-02
+1.40e+00	2.00e-01	2.00e-01	2.16e-01	3.46e-02	3.46e-02
+1.80e+00	2.00e-01	2.00e-01	1.32e-01	3.04e-02	3.04e-02
+2.50e+00	5.00e-01	5.00e-01	8.45e-02	2.54e-02	2.54e-02
+# END YODA_SCATTER2D
+
+
