@@ -208,6 +208,7 @@ RivetCMSAnalyses_la_SOURCES = \
     CMS_2015_I1356998.cc \
     CMS_2015_I1384119.cc \
     CMS_2015_I1385107.cc \
+    CMS_2015_I1346843.cc \
     CMSTOTEM_2014_I1294140.cc \
     TOTEM_2014_I1328627.cc
 if ENABLE_PRELIMINARY
