@@ -1,3 +1,8 @@
+
+2015-10-03  Holger Schulz  <holger.schulz@durham.ac.uk>
+
+	* Adding CMS_2015_I1346843 Z+gamma
+
 2015-09-28  Holger Schulz  <holger.schulz@durham.ac.uk>
 
 	* Adding D0_2000_I503361 ZPT at 1800 GeV
